# multi-microservice-gradle

./: .bazelrc  .gitignore  MODULE.bazel  REadme.md  bazel_deps.bzl  build.gradle  docker.gradle  settings.gradle
microservice1/: BUILD.bazel  Dockerfile  build.gradle
microservice1/src/main/java/com/example/microservice1/: Microservice1Application.java
microservice1/src/test/java/com/example/microservice1/: Microservice1ApplicationTests.java
microservice2/: BUILD.bazel  Dockerfile  build.gradle
microservice2/src/main/java/com/example/microservice2/: Microservice2Application.java  Microservice2Controller.java
microservice2/src/test/java/com/example/microservice2/: Microservice2ApplicationTests.java
microservice3/: BUILD.bazel  Dockerfile  build.gradle
microservice3/src/main/java/com/example/microservice3/: Microservice3Application.java
microservice3/src/main/java/com/example/microservice3/controller/: Microservice3Controller.java
microservice3/src/test/java/com/example/microservice3/: Microservice3ApplicationTests.java
