java_binary(
    name = "Microservice3Application",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    main_class = "com.example.microservice3.Microservice3Application",
    deps = [
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_context",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)


java_test(
    name = "Microservice3Test",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [":Microservice1App"],
)
